--- a/qlat/qlat/field_types.pyx.in
+++ b/qlat/qlat/field_types.pyx.in
@@ -121,6 +121,7 @@ cdef class Field{{name}}(FieldBase):
     def swap(self, Field{{name}} f1):
         cc.qswap(f1.xx, self.xx)
 
+    @property
     def total_site(self):
         cdef Coordinate x = Coordinate()
         cc.assign_direct(x.xx, self.xx.get_geo().total_site())
@@ -156,7 +157,7 @@ cdef class Field{{name}}(FieldBase):
         return SelectedPoints with n_points=1
         """
         from .c import get_psel_single
-        cdef PointsSelection psel = get_psel_single(self.total_site())
+        cdef PointsSelection psel = get_psel_single(self.total_site)
         cdef SelectedPoints{{name}} sp = SelectedPoints{{name}}(psel, self.multiplicity())
         cc.field_glb_sum(sp.xx, self.xx)
         return sp
@@ -166,35 +167,34 @@ cdef class Field{{name}}(FieldBase):
         return SelectedPoints with n_points=total_site[t_dir]
         """
         from .c import get_psel_tslice
-        cdef PointsSelection psel = get_psel_tslice(self.total_site(), t_dir=t_dir)
+        cdef PointsSelection psel = get_psel_tslice(self.total_site, t_dir=t_dir)
         cdef SelectedPoints{{name}} sp = SelectedPoints{{name}}(psel, self.multiplicity())
         cc.field_glb_sum_tslice(sp.xx, self.xx, t_dir)
         return sp
 
     def get_elems_xg(self, xg_arr):
-        cdef Geometry geo = self.geo()
-        cdef PointsSelection psel = PointsSelection(xg_arr, geo)
+        cdef PointsSelection psel = PointsSelection(self.total_site, xg_arr)
         cdef SelectedPoints{{name}} sp = SelectedPoints{{name}}(psel, self.multiplicity())
         sp @= self
         return sp
 
     def set_elems_xg(self, xg_arr, val):
         cdef Geometry geo = self.geo()
-        cdef PointsSelection psel = PointsSelection(xg_arr, geo)
+        cdef PointsSelection psel = PointsSelection(self.total_site, xg_arr)
         cdef SelectedPoints{{name}} sp = SelectedPoints{{name}}(psel, self.multiplicity())
         np.asarray(sp).ravel()[:] = np.asarray(val).ravel()
         self @= sp
 
     def get_elem_xg(self, xg_arr, cc.Int m):
         cdef Geometry geo = self.geo()
-        cdef PointsSelection psel = PointsSelection(xg_arr, geo)
+        cdef PointsSelection psel = PointsSelection(self.total_site, xg_arr)
         cdef SelectedPoints{{name}} sp = SelectedPoints{{name}}(psel, 1)
         cc.set_selected_points(sp.xx, self.xx, psel.xx, m)
         return sp
 
     def set_elem_xg(self, xg_arr, cc.Int m, val):
         cdef Geometry geo = self.geo()
-        cdef PointsSelection psel = PointsSelection(xg_arr, geo)
+        cdef PointsSelection psel = PointsSelection(self.total_site, xg_arr)
         cdef SelectedPoints{{name}} sp = SelectedPoints{{name}}(psel, 1)
         np.asarray(sp).ravel()[:] = np.asarray(val).ravel()
         cc.set_field_selected(self.xx, sp.xx, geo.xx, psel.xx, m)
