--- a/qlat/qlat/scripts/meson.build
+++ b/qlat/qlat/scripts/meson.build
@@ -10,6 +10,7 @@ py_fns = [
   'qlat_config.py',
   'topo_measure.py',
   'topo_measure_gpt.py',
+  'topo_measure_wilson_flow.py',
   ]
 py_files = files(py_fns)
 
