--- a/examples-py/Makefile
+++ b/examples-py/Makefile
@@ -77,7 +77,7 @@ update-sources:
 	-rm -rfv "$<".p
 	-mkdir -p "$<".p
 	-time ( cd "$<".p ; fn_py="$<" ; fn_json="$${fn_py%.py}.log.json" ; cp -v ../"$$fn_py" ../"$$fn_json" . ; q_verbose=1 timeout -s KILL 30m mpiexec -n 2 $(mpi_options) python3 -m mpi4py ./"$$fn_py" -qmp-geom 1 1 1 2 --mpi 1.1.1.2 --mpi_split 1.1.1.1 --mpi 1.1.2 --mpi_split 1.1.1 >log.full.txt 2>&1 ; grep "^CHECK: \|^INFO: " log.full.txt >log.txt ; grep "^CHECK: " log.txt >log.check.txt.new ; grep "^CHECK: " ../"$@" >log.check.txt )
-	-if diff "$<".p/log.check.txt "$<".p/log.check.txt.new ; then echo passed ; else cat "$<".p/log.full.txt ; false ; fi
+	-if diff "$<".p/log.check.txt "$<".p/log.check.txt.new ; then echo passed ; else tail -n 100 "$<".p/log.full.txt ; echo failed ; fi
 	-rm -rfv "$@"
 	-touch "$@"
 	-mv -v "$<".p/"$@".json.new "$@".json
