--- a/qlat-utils/qlat_utils/include/qlat-utils/meson.build
+++ b/qlat-utils/qlat_utils/include/qlat-utils/meson.build
@@ -16,10 +16,12 @@ else
   error('Cannot find endian.h header file.')
 endif
 
-if cpp.check_header('Eigen/Eigen', dependencies: deps)
-  conf_data.set('QLAT_USE_GRID_EIGEN', false)
-elif cpp.check_header('Grid/Eigen/Eigen', dependencies: deps)
+if eigen_type == 'grid'
   conf_data.set('QLAT_USE_GRID_EIGEN', true)
+elif eigen_type == 'plain' or eigen_type == 'system'
+  conf_data.set('QLAT_USE_GRID_EIGEN', false)
+else
+  error('eigen_type not correct')
 endif
 
 if quadmath.found()
