many small changes (and turn off cuda test)

--- a/qlat/qlat/include/qlat/meson.build
+++ b/qlat/qlat/include/qlat/meson.build
@@ -50,6 +50,7 @@ header_files = files(
   'gauge-action.h',
   'geometry.h',
   'grid.h',
+  'grid-sys.h',
   'hmc-stats.h',
   'hmc.h',
   'integration-multidimensional.h',
