--- a/qlat/cqlat/meson.build
+++ b/qlat/cqlat/meson.build
@@ -30,6 +30,8 @@ lib = py3.extension_module('cqlat',
   include_directories: incdir,
   link_with: clib,
   install: true,
+  install_dir: py3.get_install_dir(),
+  build_rpath: ':'.join(qlat_utils_lib + [ '$ORIGIN/qlat/lib', ]),
   install_rpath: ':'.join(qlat_utils_lib + [ '$ORIGIN/qlat/lib', ]),
   # gnu_symbol_visibility: 'default',
   )
