--- a/qlat-cps/pyproject.toml
+++ b/qlat-cps/pyproject.toml
@@ -14,4 +14,5 @@ authors = [ { name = 'Luchang Jin', email = 'ljin.luchang@gmail.com' }, ]
 dependencies = [ 'qlat', ]
 
 [tool.meson-python.args]
+setup = ['-Doptimization=2']
 compile = [ '-j4', ]
