--- a/qlat-utils/pyproject.toml
+++ b/qlat-utils/pyproject.toml
@@ -14,7 +14,7 @@ authors = [ { name = 'Luchang Jin', email = 'ljin.luchang@gmail.com' }, ]
 dependencies = [ 'numpy', 'psutil', 'cython', ]
 
 [tool.meson-python.args]
-setup = ['-Doptimization=2']
+setup = [ '-Doptimization=2', '-Ddebug=false', '-Dbuildtype=custom', '-Db_ndebug=false', ]
 compile = [ '-j4', ]
 
 [tool.cibuildwheel]
